chore: fix alignment

--- a/src/index.css
+++ b/src/index.css
@@ -41,11 +41,13 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  margin-top: 0;
+  margin-bottom: 2rem;
 }
 
 hr {
   margin: 2rem;
-  width: 80%;
+  width: 50%;
 }
 
 button {
